# MagicRTOZ

./: .gitignore  CMakeLists.txt  MagicRTOZ.h  config.h  slist.c  stimer.c  stimer.h  task.c  task.h
Examples/Process scheduler/Creating your own process type/: example.c
Examples/Static linked lists/Inserting and getting list data/: example.c  example.pde
Examples/Static linked lists/Moving local data into static lists/: example.c
MagicRTOZ/: MagicRTOZ.h  atmega328.h  atmega328_gpio.c  atmega328_htimer.c  attiny85.h  attiny85_gpio.c  boot.c  config.h  gpio.h  htimer.h  macros.h  process.c  process.h  slist.c  slist.h  status.h  stimer.c  stimer.h  system.c  task.c  task.h
